--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 .foxit-pdf-viewer-container {
-    display: block;
-    margin: 0 auto;
-    width: 1280px;
-    height: 1024px;
+  display: block;
+  margin: 0 auto;
+  width: 100vw;
+  height: 100vh;
 }
 .foxit-pdf-viewer-app {
   position: absolute;
