--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <div class="foxit-pdf-viewer-app">
-  <app-foxitpdfviewer #pdfviewer class="foxit-pdf-viewer-container"></app-foxitpdfviewer>
+  <app-foxitpdfviewer #pdfviewer id="pdf-ui" class="foxit-pdf-viewer-container"></app-foxitpdfviewer>
 </div>
